@@ -1,0 +1,7 @@
+# -*- shell-script -*-
+# Copyright (C) 2012 GraphicsMagick Group
+# Definitions of optional features and configuration values for this build.
+# Intended for use by test scripts.
+MAGICK_FEATURES='@MAGICK_FEATURES@'
+top_srcdir='@abs_top_srcdir@'
+top_builddir='@abs_top_builddir@'
